# torch-supertransformerlib

./: .readthedocs.yaml  LICENSE.txt  README.md  build.py  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/workflows/: dev_practice.yml  main.yml  publish.yml  python-test-publish.yml  python-tests.yml
docs/: LICENSE.txt  license.md  requirements.in  requirements.txt
docs/experiments/: torchscript.md
docs/source/: README.md  api.rst  concepts.rst  conf.py  howtouse.md  index.rst  license.md  test.py  todo.md
docs/source/api/: Attention.rst  Glimpses.rst  Linear.rst  Loss.rst  api.rst
docs/todo/: attention.md  basics.md  core.md  outline.md  todo.md
profiling/: profile MHA.py  profile PIMU.py  profile_PISU.py
src/: Attention.py  Layers.py  dev.py  source.py
src/supertransformerlib/: Adaptive.py  Attention.py  Basics.py  Batch.py  Core.py  Dynamic.py  DynamicEnsemble.py  Glimpses.py  Layers.py  Linear.py  Loss.py  Midbrain.py  Resource.py  Utilities.py  __init__.py  testing.py
src/supertransformerlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/supertransformerlib/Accumulation/: ACT.py  Accumulators.py  Haltables.py
src/supertransformerlib/Attention/: FeedForward.py  MHA.py  PIA.py  Throwahead.py  Utility.py  __init__.py  feedforward.py  (+4 more)
src/transformerLib/: Attention.py  Layers.py  Linear.py
tests/: requirements.in  requirements.txt  test_Learnables.py  test_adaptive.py  test_attn.py  test_core.py  test_ensemble.py  test_glimpse.py  test_resources.py  test_save  test_save.txt
tests/test_Accumulators/: test_ACT.py
tests/test_Attention/: test_FeedForward.py  test_PI_Attention.py  test_Throwahead.py  test_Utility.py  test_feedforward.py  test_multiheaded_attention.py  test_parameter_block_attention.py  test_parameterblock_attention.py  test_random_access_attn_memory.py
tests/test_Core/: test_Funcitions.py  test_Functions.py  test_Kernel.py  test_Pad.py  test_SampleUtil.py  test_SparseUtils.py  test_StringUtil.py  test_bundle_tensor.py  test_core.py  test_functions.py  test_kernel.py  test_pad.py  test_reshape.py  test_sample_util.py  test_script.py  test_state_tensor.py
tests/test_Structures/: test_ACT.py  test_ThrowaheadQueue.py
tests/test_attention/: test_feedforward.py  test_multiheaded_attention.py
tests/test_basics/: example.txt  test_Convolutional_Sample.py  test_Kernel.py  test_Linear.py  test_Local_Sample.py  test_feedforward.py  test_head_managers.py  test_linear.py  test_memory_tensor.py  test_state_management.py  test_syncronous_containers.py
tests/test_glimpses/: test_glimpse.py  test_reshape.py
tests/test_ntm/: test_heads.py  test_indexer.py  test_ntm_piece.py  test_resetter.py
tests/test_ntm_stuff/: test_defaults.py  test_ntm.py  test_state.py
tests/test_preprocessing/: test_flatten.py  test_preprocessing.py  test_string_scripting.py
transformerLib/: Attention.py  Glimpses.py  Layers.py  Linear.py
(+61 files in other folders)
