[build-system]
requires = ["flit_core > 3.2, <4"]
build-backend = "flit_core.buildapi"


[project]
name = "supertransformerlib"
authors = [
    {name = "Christopher M O'Quinn", email = "chrisoquinn.2@gmail.com"}
]
readme = "README.md"
license = {text = "docs/source/license.md"}
keywords = [
    "torch",
    "transformer",
    "transformers"
]
dependencies = ["torch >= 1.11","numpy"]
dynamic = ["version", "description"]
requires_python = ">=3.8"

[project.optional-dependencies]
doc = ["pytest"]

[project.urls]
Documentation = "https://torch-supertransformerlib.readthedocs.io/en/latest/"
Source = "https://github.com/smithblack-0/torch-supertransformerlib"