[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "supertransformerlib"
version = "2.3.2"
authors = [
    {name = "Christopher M O'Quinn", email = "chrisoquinn.2@gmail.com"}
]
description = "A set of tools for performing ensemble based supertransformer"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = [
    "torch",
    "transformer",
    "transformers"
]
dependencies = [
    "torch >= 1.11",
    "numpy"
]
requires-python = ">=3.9"

[project.optional-dependencies]
doc = ["pytest"]

[project.urls]
Documentation = "https://torch-supertransformerlib.readthedocs.io/en/latest/"
Source = "https://github.com/smithblack-0/torch-supertransformerlib"

[src]
src = "src"