[metadata]
name = "supertransformerlib"
version = 0.9
author = "Christopher M O'Quinn"
author_email = "chrisoquinn.2@gmail.com"
description = "A set of tools for performing ensemble based supertransformer"
url = "https://github.com/smithblack-0/torch-supertransformerlib"

[options]
package_dir =
    = src
packages = find:
install_requires=
    torch


[options.packages.find]
where = src