[metadata]
name = supertransformerlib
version = 0.9
author = "Christopher M O'Quinn"
author_email = "chrisoquinn.2@gmail.com"
description = "A set of tools for performing ensemble based supertransformer"
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/smithblack-0/torch-supertransformerlib"
license_files = LICENSE.txt

[options]
package_dir =
    = src
packages = find:


[options.packages.find]
where = src